<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReceiptFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:background="@color/black"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/receiptLogo"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:src="@drawable/dot_logo_white"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/logo" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="top"
                    android:layout_marginStart="20dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/receiptCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bitter"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/receiptCompanyStreetName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bitter"
                        android:text="@string/Street_Name_Sample"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/receiptCompanyCityStZipcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bitter"
                        android:text="@string/city_st_zipcode"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="50dp">

                <TextView
                    android:id="@+id/receiptDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bitter"
                    android:text="@string/date_sample"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                    <TextView
                        android:id="@+id/receiptTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bitter"
                        android:text="@string/time_sample"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bitter"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/receiptItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                tools:listitem="@layout/transaction_design_bottom_sheet"
                tools:itemCount="7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textSize="12sp"
                    android:layout_gravity="start" />

                <Space
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/receiptSubtotal"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_charge"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tax"
                    android:textSize="12sp"
                    android:layout_gravity="start" />

                <Space
                    android:layout_width="246dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/receiptTax"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_charge"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="start"/>

                <Space
                    android:layout_width="225dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/receiptTotal"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_charge"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/receiptBarcode"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:src="@drawable/barcode_long"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/barcode" />

            <TextView
                android:id="@+id/receiptOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bitter"
                android:text="@string/transaction_id_sample"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/receiptEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="48dp"
                android:padding="5dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/baseline_send_24" />

            <TextView
                android:id="@+id/receiptPrintButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="48dp"
                android:padding="5dp"
                android:text="@string/print"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/baseline_print_24" />

            <TextView
                android:id="@+id/receiptShareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="48dp"
                android:padding="5dp"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/baseline_share_24" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>