<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.ConfirmationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/confirmationAnimationView"
                android:layout_width="189dp"
                android:layout_height="308dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/transaction_confirmation"
                app:lottie_rawRes="@raw/animation_confirmation_check"
                android:elevation="5dp"
                android:src="@drawable/baseline_check_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/confirmationStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/done"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/confirmationPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_charge"
                android:textSize="30sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/printReceiptButton"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:text="@string/receipt"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/startNewSalesButton"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:text="@string/start_a_new_sale"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>