<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_information"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/newItemImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/uploading"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/new_item_image"
        android:clickable="true"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/item_name"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unitPriceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/unit_price"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unitPriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/productCategoryText"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_border"
        android:gravity="start|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/gray" />

</LinearLayout>